@@ -119,6 +119,18 @@
 	
 	function subsite_manager_pagesetup(){
 		
+		// validate the page_owner
+		$page_owner = elgg_get_page_owner_entity();
+		if (!empty($page_owner) && elgg_instanceof($page_owner, "group")) {
+			$site = elgg_get_site_entity();
+				
+			if ($page_owner->site_guid != $site->getGUID()) {
+				// you're viewing a group of a different (sub)site
+				system_message(elgg_echo("changebookmark"));
+				forward($page_owner->getURL());
+			}
+		}
+		
 		// validate access to the site
 		subsite_manager_validate_subsite_access();
 		
