@@ -12,10 +12,11 @@ x.x:
 - fixed: access bug in analytics view
 - fixed: css/js caching issues
 - fixed: new users invited for an autojoin group are not a member of the group after registration
+- fixed: able to view a group on a different (sub)site
 - changed: invitation only sites can now have a register page but no link to it
 - changed: order of the access list from least to most access
 - changed: activity page title now matches document title
-- changed:'activated the fiveminute cron on all subsites, needed for the pleio_api plugin
+- changed: activated the fiveminute cron on all subsites, needed for the pleio_api plugin
 
 2.2.1 (2013-05-22):
 
